# gramophone-spotify-pipeline

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  support_request.md
.github/workflow/: main.yaml  main.yml  release.yaml  release.yml
.github/workflows/: RELEASE-TEMPLATE.md  main.yml  release.yml  tags.yml  test.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/code/: index.html
0.1/conrtibuting/: index.html
conrtibuting/: index.html
docs/: code.md  conrtibuting.md  index.md
latest/code/: index.html
latest/conrtibuting/: index.html
latest/reference/SUMMARY/: index.html
latest/reference/hello/: index.html
latest/reference/hello/world/: index.html
search/: search_index.json
site/: index.html  objects.inv  sitemap.xml
site/code/: index.html
site/search/: search_index.json
src/: main.py
src/hello/: __init__.py  __main__.py  main.py  world.py
tests/: test_main.py
tests/test_hello/: test_main.py  test_world.py
v0.1/: 404.html  sitemap.xml
v0.1/conrtibuting/: index.html
v0.2/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
v0.2/code/: index.html
v0.2/conrtibuting/: index.html
v0.2/reference/SUMMARY/: index.html
v0.2/reference/hello/: index.html
v0.2/reference/hello/world/: index.html
v0.2/search/: search_index.json
