[tool.poetry]
name = "gramophone-spotify-pipeline"
version = "0.2.0"
description = "An exploration of spotify's luigi with spotify's data"
authors = ["Vítor F. Diniz <vitorfdiniz@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "hello", from = "src" },
    { include = "hello/py.typed", from = "src" },
]


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
luigi = { extras = [ "toml" ], version = "^3.1.1" }
pandas = "^1.5.2"
findspark = "^2.0.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
pydocstyle = "^6.1.1"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocstrings = { version = "^0.19.0", extras = [ "python" ] }
mkdocs-material = "^8.5.11"
mike = "^1.1.2"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.5.0"
mkdocs-section-index = "^0.3.4"
pymdown-extensions = "^9.9"
pygments = "^2.13.0"


[tool.pytest.ini_options]
pythonpath = [ "src" ]
addopts = [ "--import-mode=importlib" ]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@abstract"
]

[tool.mypy]
mypy_path = [ "src" ]
files = [ "src" ]
explicit_package_bases = true
namespace_packages = true
pretty = true
show_error_codes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
